--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@uiw/codemirror-theme-github": "^4.21.9",
     "@uiw/react-codemirror": "^4.21.9",
     "antd": "^5.8.3",
+    "prettier": "^3.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "uuid": "^9.0.0",
